<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ever Code</string>    
    <string name="app_nada"></string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="fire">Cerrar Sesión</string>
    <string name="cancel">Cancelar</string>
    
    <string name="dialog_cerrar_sesion_title">Cerrar Sesión</string>    
    <string name="dialog_cerrar_sesion_text">¿Cerrar sesión ahora?</string>    
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Inicio</item>
        <item >Perfil</item>
        <item >Ejercicios</item>
        <item >Mis medallas</item>
        <item >Tablero de Posiciones</item>
        <item >Cerrar Sesión</item>
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>
    </array>
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    
    <string name="s_create_account">Registrate</string>
        
    <string name="s_iniciar_sesion">Iniciar Sesión</string>
        
    
        
    <!--Content of Create User-->
    <string name="l_create_user">Usuario: </string>
    <string name="l_create_pass">Contraseña: </string>
    <string name="l_repeat_pass">Repetir Contraseña: </string>

    <string name="username_hint">Usuario</string>
    
        
    <string name="password_hint">Contraseña</string>
    
    <string name="n1_p1">1. ¿Qué es un algoritmo?</string>
    <string name="n1_p1_a1">A. Un conjunto de pasos ordenados a seguir que cumplen un fin u objetivo.</string>
    <string name="n1_p1_a2">B. Es una estructura de control.</string>
    <string name="n1_p1_a3">C. Es un dispositivo de red.</string>
    <string name="n1_p1_a4">D. Es un operación matemática definida por John Napier.</string>
    
    

</resources>
