<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    
    <RelativeLayout
        android:id="@+id/exercises_niveles"
        android:layout_width="match_parent"
        android:layout_height="100dp" >
    
    
     <Button
            android:id="@+id/n1"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:background="@color/tono7"
            android:text="Nivel 1" 
            android:textColor="@color/white"
            android:textSize="8pt"
            android:layout_centerHorizontal="true"/>
            
            <Button
            android:id="@+id/n2"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:background="@color/tono7"
            android:text="Nivel 2"
            android:textColor="@color/white" 
            android:layout_below="@+id/n1"
            android:layout_centerHorizontal="true"
            android:textSize="8pt"/>
            
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/exercises_image"
        android:layout_width="match_parent"
        android:layout_height="100dp" >

        <RelativeLayout
            android:id="@+id/exercises_contenedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true" >
        </RelativeLayout>
        
         

        <TextView
            android:id="@+id/p1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/exercises_contenedor"
            android:text="@string/n1_p1"
            android:textSize="8pt" 
            android:textColor="@color/black" />

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true" 
            />

    </RelativeLayout>

    <TableLayout
        android:id="@+id/tabla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="false"
        android:layout_below="@+id/exercises_image" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/a1"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
            	android:background="@color/tono6"
            	android:textColor="@color/white"
                android:text="@string/n1_p1_a1" 
                android:textSize="8pt"
                android:minWidth="80dp"
                android:layout_marginBottom="4dp"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/a2"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
            	android:background="@color/tono6"
            	android:textColor="@color/white"
                android:text="@string/n1_p1_a2" 
                android:textSize="8pt"
                android:layout_marginBottom="4dp"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/a3"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
            	android:background="@color/tono6"
            	android:textColor="@color/white"
                android:text="@string/n1_p1_a3" 
                android:textSize="8pt"
                android:layout_marginBottom="4dp"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/a4"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
            	android:background="@color/tono6"
            	android:textColor="@color/white"	
                android:text="@string/n1_p1_a4" 
                android:textSize="8pt"
                android:layout_marginBottom="4dp"/>
        </TableRow>        
              
        <Button
            android:id="@+id/btnCalificar"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@color/turoise"
            android:text="Calificar" 
            android:textColor="@color/white"
            android:textSize="8pt"/>

<!--         <Button -->
<!--             android:id="@+id/btnSgte" -->
<!--             android:layout_width="120dp" -->
<!--             android:layout_height="wrap_content" -->
<!--             android:background="@color/turoise" -->
<!--             android:text="Continuar"  -->
<!--             android:textSize="8pt"/> -->


            <Button
            android:id="@+id/btnCon"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@color/turoise"
            android:text="Continuar" 
            android:textSize="8pt"/>

    </TableLayout>
    <WebView
        android:id="@+id/webView"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="450dp"
        />
    <WebView android:id="@+id/puntaje"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         />
    
    
    

</RelativeLayout>